# roppos

./: .gitignore  README.md  requirements.txt  sample.json
charts/: rheinmetall.html
data/: watchlist.csv
stuttgart_charts/: __init__.py  __main__.py  data.py  indicators.py
tauri_app/src-tauri/: Cargo.toml  tauri.conf.json
tauri_app/src-tauri/src/: boerse.rs  indicators.rs  main.rs  models.rs  watchlist.rs
web_app/: __init__.py  app.py
windows_app/: boerse_stuttgart_chart.spec  build_exe.spec  main.py
