[package]
name = "boerse-stuttgart-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
csv = "1.3"
once_cell = "1.19"
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tauri = { version = "1.5", features = ["dialog-all", "fs-create-dir", "fs-read-file", "fs-write-file", "path-all"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
